Fix background and footer gaps

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -8,7 +8,28 @@ body {
 	font-family: 'Varela Round', sans-serif;
 	font-size: 22px;
 	color: rgb(122, 109, 73);
+	background-color: rgb(251, 244, 226);
 	text-align: center;
+}
+
+h1 {
+	float: left;
+	font-size: 22px;
+	color: rgb(122, 109, 73);
+	border: 5px solid rgb(122, 109, 73);
+	border-radius: 15px;
+	padding: 5px;
+	margin-left: 12px;
+}
+
+h1 a {
+	text-decoration: none;
+	color: inherit;
+}
+
+h2 {
+	color: rgb(245, 195, 21);
+	font-size: 60px;
 }
 
 h3 {
@@ -24,16 +45,6 @@ header:after {
 	content: '';
 	display: table;
 	clear: both;
-}
-
-h1 {
-	float: left;
-	font-size: 22px;
-	color: rgb(122, 109, 73);
-	border: 5px solid rgb(122, 109, 73);
-	border-radius: 15px;
-	padding: 5px;
-	margin-left: 12px;
 }
 
 nav {
@@ -56,14 +67,12 @@ nav a:hover {
 
 nav ul {
 	margin: 0;
-	padding: 0;
 	list-style-type: none;
 }
 
 nav li {
 	display: inline-block;
-	margin: 1.25em 1em 0;
-	position: relative;
+	margin: 25px 25px 0;
 }
 
 /* ----- END HEADER ----- */
@@ -97,11 +106,6 @@ nav li {
 	margin-right: 50px;
 }
 
-h2 {
-	color: rgb(245, 195, 21);
-	font-size: 60px;
-}
-
 #bio p {
 	font-family: 'Noto Serif JP', serif;
 	font-size: 16px;
@@ -116,7 +120,6 @@ h2 {
 
 #projects {
 	padding: 0 50px;
-	margin: 50px 0;
 }
 
 #project-blocks {
@@ -163,19 +166,16 @@ h2 {
 #cyrus {
 	height: 320px;
 	width: 250px;
-	margin: 0.25em 0 0.5em;
+	margin: 25px 0 50px;
 }
 
 /* ----- END ART ----- */
 
 /* ----- CONTACT/FOOTER----- */
-#contact {
-	color: rgb(245, 195, 21);
-}
 
 footer {
 	background-color: rgba(250, 223, 150, 98);
-	padding: 0.5em;
+	padding: 10px;
 	bottom: 0;
 	width: 100%;
 }
